--- a/Lektion3/Opgave1.html
+++ b/Lektion3/Opgave1.html
@@ -2,17 +2,20 @@
 <html>
 
 <head>
-    <title> Titel </title>
+    <title>Titel</title>
+    <link rel="stylesheet" href="Opgave1.css" />
 </head>
 
 <body>
-    <p>Webbens basale teknologier</p>
-    <table>
+    <p><h1>Webbens basale teknologier</h1></p>
+    <table class="sep">
+        <tr><td>
         <ol>
-            <li>a href="HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
+            <li><a href="https://da.wikipedia.org/wiki/HTML">HTML</a></li>
+            <li><a href="https://da.wikipedia.org/wiki/CSS">CSS</a></li>
+            <li><a href="https://da.wikipedia.org/wiki/JavaScript">JavaScript</a></li>
         </ol>
+    </td></tr>
     </table>
 
 </body>
