--- a/Eksamensprogrammering/spm6/index.html
+++ b/Eksamensprogrammering/spm6/index.html
@@ -6,8 +6,17 @@
         <script src="index.js" defer></script>
     </head>
     <body>
+        <button onclick="getRandomQuote()">
+            New quote!
+        </button>
         <div id="result">
+
+        </div>
+        <div id="tag">
             
+        </div>
+        <div id="tagQuotes">
+
         </div>
     </body>
 </html>
